# vTAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  run.sh
Docs/: HTAL-Implementation-guide.md  vTAL.md
tests/HTAL/: CMakeLists.txt  HTAL_Test_0.c
tests/VTAL/: CMakeLists.txt  VTAL_Test_0.c  VTAL_Test_1.c  VTAL_Test_2.c  VTAL_Test_3.c
tests/arm/lm4f120h5qr-kit/: Startup.s  VTAL_stellaris_Test.c  vTAL-keil.uvproj
tests/avr/atmega16-MCU/: README.md
tests/avr/atmega16-MCU/ISIS Professional Simulation File/: vTAL-test-atmega16.DSN
tests/avr/atmega16-MCU/vTAL-atmelStudio/: vTAL-atmelStudio.atsln
tests/avr/atmega16-MCU/vTAL-atmelStudio/vTAL-atmelStudio/: vTAL-atmelStudio.c  vTAL-atmelStudio.cproj
tests/windows-linux/HTAL/: CMakeLists.txt
tests/windows-linux/VTAL/: CMakeLists.txt  VTAL_Test_1.c  VTAL_Test_2.c
vTAL/: vTAL.h  vTALConfig.h
vTAL/vTAL-src/: HTAL.h  vTAL.c  vTAL_low_level_timer_arch.h
vTAL/vTAL-src/arch/arm/stellaris-ek-lm4f120xl/: WTimerA0.c
vTAL/vTAL-src/arch/avr/atmega16/: timer0-8bits.c
vTAL/vTAL-src/arch/linux/: linux-timer.c
